# libcod1

./: .gitignore  CMakeLists.txt  README.md  libcod1.cfg
.github/workflows/: cmake-single-platform.yml  cmake.yml
src/: build.sh  declarations.hpp  functions.hpp  gsc.cpp  gsc_player.cpp  gsc_player.hpp  gsc_utils.cpp  gsc_utils.hpp  gsc_weapons.cpp  hook.cpp  iw1x.cpp  iw1x.hpp  jump.cpp  libcod.cpp  libcod.hpp  shared.hpp  types.hpp
